alignment correction

--- a/src/styles/components/Sidebar.scss
+++ b/src/styles/components/Sidebar.scss
@@ -23,8 +23,12 @@
                     cursor: pointer;
                 }
                 .icon {
-                    width: 24px;
+                    height: 24px;
                     margin-right: 24px;
+                }
+                .icone{
+                    height: 24px;
+                    margin-right: 29.6px;
                 }
             
                 .titre {
